NEXT-1568 - Add the possiblity to change the order state from the administation

--- a/Resources/administration/src/app/component/form/sw-label/sw-label.scss
+++ b/Resources/administration/src/app/component/form/sw-label/sw-label.scss
@@ -68,10 +68,10 @@ $sw-label-warning-color-border: $color-pumpkin-spice;
     }
 
     &.sw-label--circle {
-        width: 32px;
-        height: 32px;
-        padding: 4px;
+        width: 24px;
+        height: 24px;
         border-radius: 16px;
+        padding: 0 4px 4px 4px;
         border: 0;
     }
 
