--- a/Resources/administration/src/app/component/form/sw-price-field/sw-price-field.scss
+++ b/Resources/administration/src/app/component/form/sw-price-field/sw-price-field.scss
@@ -24,7 +24,7 @@ $sw-price-field-suffix-font-weight: 400;
     }
 
     .sw-field {
-        .sw-field__suffix {
+        .sw-field__addition {
             font-weight: $sw-price-field-suffix-font-weight;
             font-size: $sw-price-field-suffix-font-size;
         }
