--- a/Resources/administration/src/module/sw-product/component/sw-product-price-form/sw-product-price-form.scss
+++ b/Resources/administration/src/module/sw-product/component/sw-product-price-form/sw-product-price-form.scss
@@ -5,7 +5,7 @@ $sw-product-price-suffix-font-weight: 400;
 
 .sw-product-price-form {
     .sw-product-price-form__field-price {
-        .sw-field__suffix {
+        .sw-field__addition {
             font-weight: $sw-product-price-suffix-font-weight;
             font-size: $sw-product-price-suffix-font-size;
         }
