--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-not-found/sw-condition-not-found.scss
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-not-found/sw-condition-not-found.scss
@@ -4,7 +4,7 @@ $sw-condition-not-found-color-error: $color-crimson;
 
 .sw-condition-not-found {
     .field--error.is--disabled {
-        .sw-field__suffix {
+        .sw-field__addition {
             border: none;
             background: none;
             padding-top: 11px;
